chore: 웹팩, ESLint, Babel, tsconfig 설정

--- a/app/presentation-react/public/index.html
+++ b/app/presentation-react/public/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="설명" />
     <meta name="keywords" content="키워드" />
     <meta name="author" content="(주)두꺼비세상" />
-    <link rel="shortcut icon" href="/static/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="/static/styles/reset.css" />
+    <link rel="shortcut icon" href="/static/image/favicon.png" />
+    <link rel="stylesheet" type="text/css" href="/static/style/reset.css" />
     <title>Duse Boilerplate</title>
   </head>
   <body>
